Avoid horizontal scrollbar in dashpage view

--- a/src/Aspire.Dashboard/Components/Pages/Metrics.razor.css
+++ b/src/Aspire.Dashboard/Components/Pages/Metrics.razor.css
@@ -108,6 +108,9 @@
     ::deep .plotly-chart-container {
         margin-left: -40px;
     }
+    ::deep .dashpage-chart-grid {
+        padding: 2px;
+    }
 }
 
 @media (max-width: 768px) {
